# ChangeLog for media-libs/libfishsound
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libfishsound/ChangeLog,v 1.3 2008/04/06 20:15:23 aballier Exp $

*libfishsound-0.9.0 (06 Apr 2008)

  06 Apr 2008; Alexis Ballier <aballier@gentoo.org>
  +files/libfishsound-0.9.0-ocert-2008-2.patch, +libfishsound-0.9.0.ebuild:
  version bump with a patch for bug #216499

  04 Jan 2008; Stefan Briesenick <sbriesen@gentoo.org>
  libfishsound-0.8.1.ebuild:
  added ~x86 keyword

*libfishsound-0.8.1 (18 Nov 2007)

  18 Nov 2007; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
  +libfishsound-0.8.1.ebuild:
  initial import
