@@ -4,14 +4,16 @@ Hash: SHA1
 AUX libfishsound-0.9.0-ocert-2008-2.patch 441 RMD160 3e0e9efcc887a5533f29f8062cc67f1655707b25 SHA1 952d6fdc7796ead54f369d25c31d752fad4729e9 SHA256 470d05d8116036ca1ab26b71e02e2a6f38606a2fc0437130e42622efe74838b2
 DIST libfishsound-0.8.1.tar.gz 472300 RMD160 49c68d40b2336e2b0765fd4e1fa38bf75715e99b SHA1 658449705fb8ee537a33fda1698714ba363f42f6 SHA256 7fb09998cc49800919f9a13a5e47c8e4dd1eee50a377c682a551e4916ca047b9
 DIST libfishsound-0.9.0.tar.gz 481006 RMD160 b535651f4192a1910abc6bd316c5362223cce84c SHA1 3cc4ebc9ce832ccdb8db1ae61f984a80d37657de SHA256 b714dcd3290b3a7cf8918c669a2d6c536e82ef04081a25c53e0d8b1f703af0f1
+DIST libfishsound-0.9.1.tar.gz 485127 RMD160 1fc64b0ddf455401aa75544cebaf671bd7505f88 SHA1 1c587f55265a024911442a61b538c308f1f185c0 SHA256 2f2d651bb106509abd662a0cfd55769a323a0d0bd33c1cc56a4756f3b1693368
 EBUILD libfishsound-0.8.1.ebuild 1213 RMD160 9f0a56e38a1f654db25808dea8a285398974cba1 SHA1 f67209958fd2533470ff4752cc92943791a669fd SHA256 a3df8c67b4d15ce682c8b84c258edd0b2b90d0c9ec3c918a11cf654489dc4990
 EBUILD libfishsound-0.9.0.ebuild 1274 RMD160 f2d00ff2f0a0adc89a33a28a7d9d6fa8a6a0d308 SHA1 2923824f46e1d672186ff2870564c5c800b2223e SHA256 6fe030d7f8e633b5e2133a1876613f87ef7142b85eb8e7da2cddc7e2b34e510e
-MISC ChangeLog 685 RMD160 bac480f3b0456e3c429b3e36b46349e15c2a771c SHA1 ae989343d9e7ea5fb931f800ac00d59c3a3a9bc0 SHA256 5c6cbbd9208ae1c7e33412058679c498bdb2747e8ae30436de228b6dbc8be3f4
+EBUILD libfishsound-0.9.1.ebuild 1212 RMD160 e60dcfe7bb0e10ccccf1db682af1ed45d5124309 SHA1 e14512097856a2438bf814e35c0c5fb642d20b71 SHA256 5a2cff0db4b6c335b0bfc2d06e6f8b1d1298b1eeae32a8f65b08908207b4958a
+MISC ChangeLog 818 RMD160 2ed4c2a3f1dd4d2346ad76424dce47935ae70df1 SHA1 82c45a17d03bb0a07c80e6aaa837db76eb3dc2b4 SHA256 4e43022dd262987101d7912c288c95352c02254c721d6c8839f5be15864be54d
 MISC metadata.xml 252 RMD160 68406e733c1a9f26b7ab37e79ab53b3f59305b3a SHA1 6e5cc1551616801a2f257d688e6fc286044c3499 SHA256 5ab00710d822d203a1a38e1b6a9754137de4fe2cf5c4e79470419ed3f3927450
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkf5L2QACgkQvFcC4BYPU0olgACcDaEA/uwQqWeYnChYjzXk0pge
-CZcAoMM/LCv4oErPYe4dsycnaNEdKACp
-=iQYw
+iEYEARECAAYFAkf5wMgACgkQvFcC4BYPU0rDuACgnjKypqD9coe/Pve6rjPbvP0c
+O34AoMEj6mR1SMoRhZL2ue5GkfH1vE/0
+=fGAt
 -----END PGP SIGNATURE-----
