@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libfishsound
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libfishsound/ChangeLog,v 1.3 2008/04/06 20:15:23 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libfishsound/ChangeLog,v 1.4 2008/04/07 06:35:42 aballier Exp $
+
+*libfishsound-0.9.1 (07 Apr 2008)
+
+  07 Apr 2008; Alexis Ballier <aballier@gentoo.org>
+  +libfishsound-0.9.1.ebuild:
+  version bump
 
 *libfishsound-0.9.0 (06 Apr 2008)
 
